--- a/app/panelWyswietlAutobus.html
+++ b/app/panelWyswietlAutobus.html
@@ -1,5 +1,5 @@
 
-<div ng-controller="ShowBusstopController" class="panelWyswietlAutobus">
+<div ng-controller="ShowBusController" class="panelWyswietlAutobus">
   <div class="panelWyswietlAutobus__title">Szczegóły Autobusu</div>
   <div class="panelWyswietlAutobus__fastTravel"><span><a href="/"><i class="fa fa-home"></i>Home</a></span><span><a href="/bus">Zarządzanie Autobusami</a></span><span class="-active"><a href="/bus/show/{{ AutobusID }}">Szczegóły Autobusu</a></span></div>
   <div ng-repeat="item in autobus as AktualnyAutobus" class="panelWyswietlAutobus__wrapper">
