--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -1,16 +1,16 @@
 
 <div class="panelDodajAutobus">
   <div class="panelDodajAutobus__title">Dodaj Autobus</div>
-  <div class="panelDodajAutobus__fastTravel"><span><a href="/"><i class="fa fa-home"></i>Home</a></span><span><a href="/bus">Zarządzanie Autobusami</a></span><span class="-active"><a href="/bus/add">Dodaj Autobus</a></span></div>
+  <div class="panelDodajAutobus__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span><a href="/bus">Zarządzanie Autobusami</a></span><span class="-active"><a href="/#/bus/add">Dodaj Autobus</a></span></div>
   <div class="panelDodajAutobus__wrapper">
     <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
     <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
     <div class="panelDodajAutobus__content__form">
       <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
-        <input placeholder="Podaj Nr. Rejestracyjny"/>
+        <input placeholder="Numer Rejestracyjny"/>
       </div>
       <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
-        <input placeholder="Podaj Nr. VIN"/>
+        <input placeholder="Numer VIN"/>
       </div>
       <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
         <select>
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="panelDodajAutobus__navigation">
-      <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
+      <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
     </div>
   </div>
 </div>
