--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -12,6 +12,12 @@
       <div class="panelDodajPrzystanek__content__form__item"><span class="item">Lokalizacja</span>
         <input placeholder="Podaj ulice"/>
       </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
+        <select>
+          <option value="0">Nie</option>
+          <option value="1">Tak</option>
+        </select>
+      </div>
       <div class="panelDodajPrzystanek__content__form__item"><span class="item">Współrzędne X</span>
         <input placeholder="Podaj koordynat X"/>
       </div>
