--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl" ng-app="app">
   <head>
-    <base href="/">
     <title>Projekt Zespolow || MPK</title>
     <meta charset="utf-8">
     <meta name="description" content="">
@@ -49,15 +48,15 @@
         <div class="header__switcher -hidden">
           <div class="background"></div>
           <ul class="header__panel">
-            <li class="header__item"><a href="/bus"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="/#/bus"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
-            <li class="header__item"><a href="/busstop"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="/#/busstop"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
-            <li class="header__item"><a href="/roads"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="/#/roads"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
-            <li class="header__item"><a href="/user"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="/#/user"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
-            <li class="header__item"><a href="/controls"><span class="header__button"><span class="header__buttonIconBG">
+            <li class="header__item"><a href="/#/controls"><span class="header__button"><span class="header__buttonIconBG">
                     <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
           </ul>
         </div>
@@ -68,17 +67,17 @@
         <div class="headerProfile__switcher -hidden">
           <div class="background"></div>
           <ul class="headerProfile__panel">
-            <li class="headerProfile__item"><a href="/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
-            <li class="headerProfile__item"><a href="/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
-            <li class="headerProfile__item"><a href="/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
-            <li class="headerProfile__item"><a href="/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
-            <li class="headerProfile__item"><a href="/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
-            <li class="headerProfile__item"><a href="/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+            <li class="headerProfile__item"><a href="/#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
                     <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
           </ul>
         </div>
