--- a/app/panelPrzystanki.html
+++ b/app/panelPrzystanki.html
@@ -1,7 +1,7 @@
 
 <div class="panelPrzystanki">
   <div class="panelPrzystanki__title">Zarządzanie przystankami</div>
-  <div class="panelPrzystanki__fastTravel"><span><a href="/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/busstop">Zarządzanie Przystankami</a></span></div>
+  <div class="panelPrzystanki__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/busstop">Zarządzanie Przystankami</a></span></div>
   <div class="panelPrzystanki__wrapper">
     <div class="panelPrzystanki__subtitle">Przystanki floty</div>
     <div class="panelPrzystanki__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
@@ -55,7 +55,7 @@
             <td>{{przystanek.BusStopTypeName}}</td>
             <td>{{przystanek.GotMachineName}}</td>
             <td>{{przystanek.GotKioskName}}</td>
-            <td><a href="/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/busstop/delete/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+            <td><a href="/#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/busstop/delete/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
           </tr>
           <tr ng-hide="filtrowanePrzystanku.length">
             <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
@@ -81,7 +81,7 @@
           <td>{{przystanek.BusStopTypeName}}</td>
           <td>{{przystanek.GotMachineName}}</td>
           <td>{{przystanek.GotKioskName}}</td>
-          <td><a href="/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/busstop/delete/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+          <td><a href="/#/" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="/#/busstop/show/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/busstop/restore/{{ przystanek.Id }}" class="navigation"><i class="ionicons ion-android-add-circle -green"></i></a></td>
         </tr>
         <tr ng-hide="filtrowanePrzystankuNieaktywe.length">
           <td colspan="6" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
