--- a/app/panelPrzystanki.html
+++ b/app/panelPrzystanki.html
@@ -1,6 +1,6 @@
 
 <div class="panelPrzystanki">
-  <div class="panelPrzystanki__title">Zarządzanie przystankami</div>
+  <div class="panelPrzystanki__title">Zarządzanie Przystankami</div>
   <div class="panelPrzystanki__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/busstop">Zarządzanie Przystankami</a></span></div>
   <div class="panelPrzystanki__wrapper">
     <div class="panelPrzystanki__subtitle">Przystanki floty</div>
