--- a/app/panelAutobusy.html
+++ b/app/panelAutobusy.html
@@ -1,6 +1,6 @@
 
 <div class="panelAutobusy">
-  <div class="panelAutobusy__title">Zarządzanie autobusami</div>
+  <div class="panelAutobusy__title">Zarządzanie Autobusami</div>
   <div class="panelAutobusy__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="/#/bus">Zarządzanie Autobusami</a></span></div>
   <div class="panelAutobusy__wrapper">
     <div class="panelAutobusy__subtitle">Flota Autobusów</div>
