--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -3,26 +3,26 @@
   <div class="panelDodajPrzystanek__title">Dodaj Przystanek</div>
   <div class="panelDodajPrzystanek__fastTravel"><span><a href="/#/"><i class="fa fa-home"></i>Home</a></span><span><a href="/#/busstop">Zarządzanie Autobusami</a></span><span class="-active"><a href="/#/busstop/add">Dodaj Przystanek</a></span></div>
   <div class="panelDodajPrzystanek__wrapper">
-    <div class="panelDodajPrzystanek__subtitle">Dodawanie przystankow floty</div>
+    <div class="panelDodajPrzystanek__subtitle">Dodawanie przystanku floty</div>
     <div class="panelDodajPrzystanek__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
     <div class="panelDodajPrzystanek__content__form">
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa przystanku</span>
-        <input placeholder="Podaj nazwe przystanku"/>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa Przystanku</span>
+        <input placeholder="Nazwa Przystanku"/>
       </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Lokalizacja</span>
-        <input placeholder="Podaj ulice"/>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Ulica</span>
+        <input placeholder="Ulica"/>
       </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Typ Przystanku</span>
         <select>
-          <option value="0">Nie</option>
-          <option value="1">Tak</option>
+          <option value="0">Normalny</option>
+          <option value="1">Zabudowany</option>
         </select>
       </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Współrzędne X</span>
-        <input placeholder="Podaj koordynat X"/>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lat</span>
+        <input placeholder="Lat"/>
       </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Współrzędne Y</span>
-        <input placeholder="Podaj koordynat Y"/>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
+        <input placeholder="Lng"/>
       </div>
       <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
         <select>
