--- a/app/panelUsers.html
+++ b/app/panelUsers.html
@@ -9,46 +9,65 @@
     <div class="panelUsers__filtrs">
       <div class="panelUsers__filtr">
         <label>Email</label>
-        <input placeholder="Szukaj Użytkownika..."/>
+        <input placeholder="Szukaj Użytkownika..." ng-model="userFilter.Email"/>
       </div>
       <div class="panelUsers__filtr">
         <label>Ranga</label>
-        <select>
+        <select ng-model="userFilter.Rank">
           <option value="">Ranga</option>
-          <option value="0">Kontroler</option>
-          <option value="1">Administrator</option>
+          <option value="0">Użytkownik</option>
+          <option value="1">Kontroler</option>
+          <option value="2">Administrator</option>
         </select>
       </div>
       <div class="panelUsers__filtr">
         <label>Status</label>
-        <select>
+        <select ng-model="userFilter.Status">
           <option value="">Status</option>
           <option value="0">Nieaktywny</option>
           <option value="1">Aktywny</option>
         </select>
       </div>
       <div class="panelUsers__table">
-        <table wt-responsive-table="wt-responsive-table" class="responsive">
+        <table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive">
           <tr>
             <th>Email</th>
             <th>Ranga</th>
             <th>Status</th>
             <th>Zarządzanie</th>
           </tr>
-          <tr>
-            <td>123456789</td>
-            <td>Normalny</td>
-            <td>Aktywny</td>
-            <td><a href="/#" class="navigation"><i class="ionicons ion-edit"></i></a><a href="/#" class="navigation"><i class="ionicons ion-android-delete -red"></i></a></td>
+          <tr ng-repeat="user in users | filter:userFilter | filter:{ Status: '!0'} as filtrowaneUsers">
+            <td>{{ user.Email }}</td>
+            <td>{{ user.RankName }}</td>
+            <td>{{ user.StatusName }}</td>
+            <td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
           </tr>
-          <tr>
-            <td>..</td>
-            <td>..</td>
-            <td>..</td>
-            <td>..</td>
+          <tr ng-hide="filtrowaneUsers.length">
+            <td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
           </tr>
         </table>
       </div>
+    </div>
+    <div class="panelUsers__subtitle">Nieaktywni Użytkownicy</div>
+    <div class="panelUsers__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
+    <div class="panelUsers__table">
+      <table wt-responsive-table="wt-responsive-table" ng-controller="UserController" class="responsive">
+        <tr>
+          <th>Email</th>
+          <th>Ranga</th>
+          <th>Status</th>
+          <th>Zarządzanie</th>
+        </tr>
+        <tr ng-repeat="user in users | filter:userFilter | filter:{ Status: '0'} as filtrowaneUsersNieaktywni">
+          <td>{{ user.Email }}</td>
+          <td>{{ user.RankName }}</td>
+          <td>{{ user.StatusName }}</td>
+          <td><a href="/#/user/show/{{ user.Id }}" class="navigation"><i class="ionicons ion-settings"></i></a><a href="/#/user/delete/{{ user.Id }}" class="navigation"><i class="ionicons ion-android-cancel -red"></i></a></td>
+        </tr>
+        <tr ng-hide="filtrowaneUsersNieaktywni.length">
+          <td colspan="4" class="-alert">Brak wpisów, proszę zmienić kryteria wyszukiwania.</td>
+        </tr>
+      </table>
     </div>
   </div>
 </div>
