--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -5,40 +5,8 @@
   <div class="panelDodajPrzystanek__wrapper">
     <div class="panelDodajPrzystanek__subtitle">Dodawanie przystanku floty</div>
     <div class="panelDodajPrzystanek__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <div class="panelDodajPrzystanek__content__form">
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa Przystanku</span>
-        <input placeholder="Nazwa Przystanku"/>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Ulica</span>
-        <input placeholder="Ulica"/>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Typ Przystanku</span>
-        <select>
-          <option value="0">Normalny</option>
-          <option value="1">Zabudowany</option>
-        </select>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lat</span>
-        <input placeholder="Lat"/>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
-        <input placeholder="Lng"/>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
-        <select>
-          <option value="0">Nie</option>
-          <option value="1">Tak</option>
-        </select>
-      </div>
-      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma kiosk?</span>
-        <select>
-          <option value="0">Nie</option>
-          <option value="1">Tak</option>
-        </select>
-      </div>
-    </div>
-    <div class="panelDodajPrzystanek__navigation">
-      <button class="green panelDodajPrzystanek__navigation__item green">Dodaj Autobus</button><a href="/#/busstop" class="panelDodajPrzystanek__navigation__item gray -abort">Anuluj</a>
-    </div>
+    <form>
+      <s></s>
+    </form>
   </div>
 </div>
