--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -5,28 +5,30 @@
   <div class="panelDodajAutobus__wrapper">
     <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
     <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <div class="panelDodajAutobus__content__form">
-      <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
-        <input placeholder="Numer Rejestracyjny"/>
+    <form>
+      <div class="panelDodajAutobus__content__form">
+        <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
+          <input placeholder="Numer Rejestracyjny"/>
+        </div>
+        <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
+          <input placeholder="Numer VIN"/>
+        </div>
+        <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
+          <select>
+            <option value="0">Normalny</option>
+            <option value="1">Przegubowy</option>
+          </select>
+        </div>
+        <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
+          <select>
+            <option value="0">Nie</option>
+            <option value="1">Tak</option>
+          </select>
+        </div>
       </div>
-      <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
-        <input placeholder="Numer VIN"/>
+      <div class="panelDodajAutobus__navigation">
+        <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
       </div>
-      <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
-        <select>
-          <option value="0">Normalny</option>
-          <option value="1">Przegubowy</option>
-        </select>
-      </div>
-      <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
-        <select>
-          <option value="0">Nie</option>
-          <option value="1">Tak</option>
-        </select>
-      </div>
-    </div>
-    <div class="panelDodajAutobus__navigation">
-      <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
-    </div>
+    </form>
   </div>
 </div>
