--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,9 @@
     <div class="panels">
       <div ng-view></div>
       <div class="panels__close"><a href="/"><i class="fa fa-angle-double-left"></i></a></div>
+      <footer>
+        <p>Zespół Coffee <br> Like?<img src="img/coffee-cup.png" alt="Team"></p>
+      </footer>
     </div>
     <div class="wrapper">
       <div class="googleMaps">
