--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -5,22 +5,22 @@
   <div class="panelDodajAutobus__wrapper">
     <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
     <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <form>
+    <form ng-controller="AddBusController" ng-submit="createBus()">
       <div class="panelDodajAutobus__content__form">
         <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
-          <input placeholder="Numer Rejestracyjny"/>
+          <input placeholder="Numer Rejestracyjny" ng-model="busToCreate[0].RegistrationNumber"/>
         </div>
         <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
-          <input placeholder="Numer VIN"/>
+          <input placeholder="Numer VIN" ng-model="busToCreate[0].BusNumber"/>
         </div>
         <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
-          <select>
+          <select ng-model="busToCreate[0].BusType">
             <option value="0">Normalny</option>
             <option value="1">Przegubowy</option>
           </select>
         </div>
         <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
-          <select>
+          <select ng-model="busToCreate[0].GotMachine">
             <option value="0">Nie</option>
             <option value="1">Tak</option>
           </select>
