--- a/app/panelWyswietlPrzystanek.html
+++ b/app/panelWyswietlPrzystanek.html
@@ -33,36 +33,36 @@
     </div>
     <div class="panelWyswietlPrzystanek__subtitle">Edycja przystanku</div>
     <div class="panelWyswietlPrzystanek__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <form>
+    <form ng-controller="UpdateBustopController" ng-submit="updateBusstop()">
       <div class="panelWyswietlPrzystanek__content__form">
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Nazwa Przystanku</span>
-          <input placeholder="Nazwa Przystanku"/>
+          <input placeholder="Nazwa Przystanku" ng-model="busstopToUpdate[0].Name"/>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Ulica</span>
-          <input placeholder="Ulica"/>
+          <input placeholder="Ulica" ng-model="busstopToUpdate[0].LocalizationString"/>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Typ Przystanku</span>
-          <select>
+          <select ng-model="busstopToUpdate[0].BusStopType">
             <option value="">Typ Przystanku</option>
             <option value="0">Normalny</option>
             <option value="1">Zabudowany</option>
           </select>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Koordynat Lat</span>
-          <input placeholder="Lat"/>
+          <input placeholder="Lat" ng-model="busstopToUpdate[0].Lat"/>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Koordynat Lng</span>
-          <input placeholder="Lng"/>
+          <input placeholder="Lng" ng-model="busstopToUpdate[0].Lng"/>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Biletomat</span>
-          <select>
+          <select ng-model="busstopToUpdate[0].GotMachine">
             <option value="">Biletomat</option>
             <option value="0">Nie</option>
             <option value="1">Tak</option>
           </select>
         </div>
         <div class="panelWyswietlPrzystanek__content__form__item"><span class="item">Kiosk</span>
-          <select>
+          <select ng-model="busstopToUpdate[0].GotKiosk">
             <option value="">Kiosk</option>
             <option value="0">Nie</option>
             <option value="1">Tak</option>
