--- a/app/panelWyswietlUser.html
+++ b/app/panelWyswietlUser.html
@@ -27,19 +27,19 @@
     </div>
     <div class="panelWyswietlUser__subtitle">Edycja użytkownika</div>
     <div class="panelWyswietlUser__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <form>
+    <form ng-controller="UpdateUserController" ng-submit="updateUser()">
       <div class="panelWyswietlUser__content__form">
         <div class="panelWyswietlUser__content__form__item"><span class="item">Email Użytkownika</span>
-          <input placeholder="Email Użytkownika"/>
+          <input placeholder="Email Użytkownika" ng-model="userToUpdate[0].Email"/>
         </div>
         <div class="panelWyswietlUser__content__form__item"><span class="item">Imie</span>
-          <input placeholder="Imie"/>
+          <input placeholder="Imie" ng-model="userToUpdate[0].Imie"/>
         </div>
         <div class="panelWyswietlUser__content__form__item"><span class="item">Nazwisko</span>
-          <input placeholder="Nazwisko"/>
+          <input placeholder="Nazwisko" ng-model="userToUpdate[0].Nazwisko"/>
         </div>
         <div class="panelWyswietlUser__content__form__item"><span class="item">Ranga</span>
-          <select>
+          <select ng-model="userToUpdate[0].Rank">
             <option value="">Ranga</option>
             <option value="0">Użytkownik</option>
             <option value="1">Kontroler</option>
@@ -47,7 +47,7 @@
           </select>
         </div>
         <div class="panelWyswietlUser__content__form__item"><span class="item">Hasło</span>
-          <input placeholder="Hasło"/>
+          <input placeholder="Hasło" type="Password" ng-model="userToUpdate[0].Password"/>
         </div>
         <div class="panelWyswietlUser__content__form__item"><span class="item">Powtórz Hasło</span>
           <input placeholder="Hasło"/>
