--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js"></script>
+    <script src="bower_components/ngmap/build/scripts/ng-map.js"></script>
     <!--script(src="bower_components/responsive-tables-js/dist/responsivetables.js")-->
     <!--script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")-->
     <!-- bower:css -->
@@ -91,10 +92,11 @@
       </footer>
     </div>
     <div class="wrapper">
-      <div class="googleMaps">
-        <div id="googleMaps" class="googleMaps__API"></div>
+      <div ng-controller="MapController" class="googleMaps">
+        <div id="googleMaps" ng-map="" center="[53.77842200000001, 20.48011930000007]" zoom="14" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" class="googleMaps__API"></div>
       </div>
     </div>
     <script src="app.js"></script>
+    <script src="googleMaps.js"></script>
   </body>
 </html>
