--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -5,7 +5,7 @@
   <div class="panelDodajAutobus__wrapper">
     <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
     <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
-    <form ng-controller="AddBusController" ng-submit="createBus()">
+    <form ng-controller="AddBusController">
       <div class="panelDodajAutobus__content__form">
         <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
           <input placeholder="Numer Rejestracyjny" ng-model="busToCreate[0].RegistrationNumber"/>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="panelDodajAutobus__navigation">
-        <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
+        <button ng-click="createBus()" class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="/#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
       </div>
     </form>
   </div>
